z-index fix

--- a/scss/_about-masthead.scss
+++ b/scss/_about-masthead.scss
@@ -17,6 +17,7 @@ header.about-masthead {
         width: 100%;
         top: 10px;
         padding: 0 90px;
+        z-index: 10;
 
         @media(max-width: 600px) {
             padding: 0 20px;
